--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="true" />
 
     <application
         android:name=".App"
@@ -8,11 +11,13 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
+
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.OkeyScore"
         tools:targetApi="31">
         <activity
+            android:resizeableActivity="false"
             android:name=".MainActivity"
             android:exported="true"
             android:configChanges="uiMode"
