--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         viewBinding = true
@@ -67,8 +67,8 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.7.0")
     implementation("androidx.activity:activity-ktx:1.8.2")
     implementation "androidx.fragment:fragment-ktx:1.6.2"
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.7.0"
-    implementation "androidx.lifecycle:lifecycle-livedata:2.7.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.7.0"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.7.0"
 
     implementation 'androidx.room:room-common:2.6.1'
@@ -77,5 +77,7 @@ dependencies {
     implementation "androidx.room:room-ktx:2.6.1"
     implementation 'it.xabaras.android:recyclerview-swipedecorator:1.4'
     implementation 'at.blogc:expandabletextview:1.0.5'
+    implementation("com.tbuonomo:dotsindicator:5.0")
+    implementation 'com.airbnb.android:lottie:2.8.0'
 
 }
